model 2 results added

--- a/First model - Income, hhsize, Rooms.ipynb
+++ b/First model - Income, hhsize, Rooms.ipynb
@@ -18,11 +18,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['NEWID', 'AGE', 'DETTACHED', 'OWN', 'DEGREE', 'HHSIZE', 'INCOME',\n",
+       "       'WEIGHT', 'WHITE', 'NORTHEAST', 'MIDWEST', 'SOUTH', 'WEST', 'ROOMS',\n",
+       "       'MALE', 'MSA', 'VEHICLES', 'Totalexpenditures', 'Totalfood',\n",
+       "       'Foodathome', 'Foodawayfromhome', 'Alcoholicbeverages', 'Housing',\n",
+       "       'Shelter', 'Otherlodging', 'Telephoneservices',\n",
+       "       'Waterandotherpublicservices', 'Householdoperations',\n",
+       "       'Domesticservices', 'Domesticservicesexcludingchildcare',\n",
+       "       'Babysittingandchilddaycare', 'Otherhouseholdexpenses',\n",
+       "       'Housefurnishingsandequipment', 'Householdtextiles', 'Furniture',\n",
+       "       'Floorcoverings', 'Majorappliances',\n",
+       "       'Smallappliancesmiscellaneoushousewares',\n",
+       "       'Miscellaneoushouseholdequipment', 'Apparelandservices',\n",
+       "       'Transportation', 'Carsandtrucksnewnetoutlay',\n",
+       "       'Carsandtrucksusednetoutlay', 'Othervehicles', 'Vehiclefinancecharges',\n",
+       "       'Maintenanceandrepairs', 'Vehicleinsurance',\n",
+       "       'Vehiclerentalleaseslicensesandothercharges',\n",
+       "       'Publicandothertransportation', 'Publicandothertransportationontrips',\n",
+       "       'Localpublictransportationexcludingontrips', 'Healthcare',\n",
+       "       'Healthinsurance', 'Medicalservices', 'Prescriptiondrugs',\n",
+       "       'Medicalsupplies', 'Entertainment', 'Feesandadmissions',\n",
+       "       'Televisionsradiosandsoundequipment', 'Otherequipmentandservices',\n",
+       "       'Petstoysandplaygroundequipment', 'Otherentertainment', 'Personalcare',\n",
+       "       'Reading', 'Education', 'Tobaccoandsmokingsupplies',\n",
+       "       'Miscellaneousexpenditures', 'Cashcontributions',\n",
+       "       'Personalinsuranceandpensions', 'Adjustedtotalexpenditures'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "fmli = pd.read_csv(\"fmli_15_clean.csv\")"
+    "fmli = pd.read_csv(\"fmli_15_clean.csv\")\n",
+    "fmli.columns"
    ]
   },
   {
@@ -2988,6 +3025,15 @@
    "source": [
     "with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
     "    display(parameter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameter.to_csv(\"multimodel_3var.csv\")"
    ]
   },
   {
