--- a/Second model - INCOME, HHSIZE, ROOMS, DETACHED, OWN, DEGREE, VEHICLES.ipynb
+++ b/Second model - INCOME, HHSIZE, ROOMS, DETACHED, OWN, DEGREE, VEHICLES.ipynb
@@ -59,29 +59,27 @@
       "text/plain": [
        "Index(['NEWID', 'AGE', 'DETTACHED', 'OWN', 'DEGREE', 'HHSIZE', 'INCOME',\n",
        "       'WEIGHT', 'WHITE', 'NORTHEAST', 'MIDWEST', 'SOUTH', 'WEST', 'ROOMS',\n",
-       "       'MALE', 'MSA', 'VEHICLES', 'Totalexpenditures', 'Totalfood',\n",
-       "       'Foodathome', 'Foodawayfromhome', 'Alcoholicbeverages', 'Housing',\n",
-       "       'Shelter', 'Otherlodging', 'Telephoneservices',\n",
-       "       'Waterandotherpublicservices', 'Householdoperations',\n",
-       "       'Domesticservices', 'Domesticservicesexcludingchildcare',\n",
-       "       'Babysittingandchilddaycare', 'Otherhouseholdexpenses',\n",
-       "       'Housefurnishingsandequipment', 'Householdtextiles', 'Furniture',\n",
-       "       'Floorcoverings', 'Majorappliances',\n",
-       "       'Smallappliancesmiscellaneoushousewares',\n",
-       "       'Miscellaneoushouseholdequipment', 'Apparelandservices',\n",
-       "       'Transportation', 'Carsandtrucksnewnetoutlay',\n",
-       "       'Carsandtrucksusednetoutlay', 'Othervehicles', 'Vehiclefinancecharges',\n",
-       "       'Maintenanceandrepairs', 'Vehicleinsurance',\n",
-       "       'Vehiclerentalleaseslicensesandothercharges',\n",
-       "       'Publicandothertransportation', 'Publicandothertransportationontrips',\n",
-       "       'Localpublictransportationexcludingontrips', 'Healthcare',\n",
-       "       'Healthinsurance', 'Medicalservices', 'Prescriptiondrugs',\n",
-       "       'Medicalsupplies', 'Entertainment', 'Feesandadmissions',\n",
-       "       'Televisionsradiosandsoundequipment', 'Otherequipmentandservices',\n",
-       "       'Petstoysandplaygroundequipment', 'Otherentertainment', 'Personalcare',\n",
-       "       'Reading', 'Education', 'Tobaccoandsmokingsupplies',\n",
-       "       'Miscellaneousexpenditures', 'Cashcontributions',\n",
-       "       'Personalinsuranceandpensions', 'Adjustedtotalexpenditures'],\n",
+       "       'MALE', 'MSA', 'VEHICLES', 'TotalExpenditures', 'TotalFood',\n",
+       "       'FoodAtHome', 'FoodAwayFromHome', 'AlcoholicBeverages', 'Housing',\n",
+       "       'Shelter', 'OtherLodging', 'UtilitiesFuelsAndPublicServices',\n",
+       "       'TelephoneServices', 'WaterAndOtherPublicServices',\n",
+       "       'HouseholdOperations', 'DomesticServices',\n",
+       "       'DomesticServicesExclChildcare', 'BabysittingAndChildDayCare',\n",
+       "       'OtherhouseHoldExpenses', 'HouseFurnishingsAndEquipment',\n",
+       "       'HouseholdTextiles', 'Furniture', 'FloorCoverings', 'MajorAppliances',\n",
+       "       'SmallAppliancesMiscHousewares', 'MiscHoushouseholdEquipment',\n",
+       "       'ApparelAndServices', 'Transportation', 'CarsAndTrucksNewNetOutlay',\n",
+       "       'CarsAndTrucksUsedNetOutlay', 'Othervehicles', 'VehicleFinanceCharges',\n",
+       "       'MaintenanceAndRepairs', 'VehicleInsurance', 'VehicleRentalLeases',\n",
+       "       'PublicAndOtherTransportation', 'PublicAndOtherTransportationOnTrips',\n",
+       "       'LocalPublicTransportationExclOnTrips', 'Healthcare', 'HealthInsurance',\n",
+       "       'MedicalServices', 'PrescriptionDrugs', 'MedicalSupplies',\n",
+       "       'Entertainment', 'FeesAndAdmissions',\n",
+       "       'TelevisionsRadiosAndSoundEquipment', 'OtherEquipmentAndServices',\n",
+       "       'PetsToysAndPlaygroundEquipment', 'OtherEntertainment', 'PersonalCare',\n",
+       "       'Reading', 'Education', 'TobaccoAndSmokingSupplies',\n",
+       "       'MiscellaneousExpenditures', 'CashContributions',\n",
+       "       'PersonalInsuranceAndPensions', 'AdjustedTotalExpenditures'],\n",
        "      dtype='object')"
       ]
      },
@@ -186,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,9 +233,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "arrays must all be same length",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-2ba3ad404aec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m                           \u001b[0;34m\"N\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mN\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m53\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"  \"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m53\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                           \u001b[0;34m\"adj_r2\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0madj_r\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m53\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"  \"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m53\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m                           \"index\": index})\n\u001b[0m",
+      "\u001b[0;32m~/miniconda2/envs/tf/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    390\u001b[0m                                  dtype=dtype, copy=copy)\n\u001b[1;32m    391\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 392\u001b[0;31m             \u001b[0mmgr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minit_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    393\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMaskedArray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    394\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmrecords\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmrecords\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda2/envs/tf/lib/python3.7/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36minit_dict\u001b[0;34m(data, index, columns, dtype)\u001b[0m\n\u001b[1;32m    210\u001b[0m         \u001b[0marrays\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 212\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marrays_to_mgr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    213\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda2/envs/tf/lib/python3.7/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36marrays_to_mgr\u001b[0;34m(arrays, arr_names, index, columns, dtype)\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[0;31m# figure out the index, if necessary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m         \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m         \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mensure_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda2/envs/tf/lib/python3.7/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36mextract_index\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    315\u001b[0m             \u001b[0mlengths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_lengths\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    316\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlengths\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 317\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'arrays must all be same length'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    318\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    319\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhave_dicts\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: arrays must all be same length"
+     ]
+    }
+   ],
    "source": [
     "parameter = pd.DataFrame({\"parameter\": [\"Beta\"] * 53 + [\"SE\"] * 53 + [\"Confidence Level\"] * 53,\n",
     "                          \"HHSIZE\": np.concatenate([b_hhsize, se_hhsize, p_hhsize]),\n",
