--- a/Second model - INCOME, HHSIZE, ROOMS, OWN, DEGREE, VEHICLES.ipynb
+++ b/Second model - INCOME, HHSIZE, ROOMS, OWN, DEGREE, VEHICLES.ipynb
@@ -1286,239 +1286,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TotalExpenditures</th>\n",
-       "      <th>TotalFood</th>\n",
-       "      <th>FoodAtHome</th>\n",
-       "      <th>FoodAwayFromHome</th>\n",
-       "      <th>AlcoholicBeverages</th>\n",
-       "      <th>Housing</th>\n",
-       "      <th>Shelter</th>\n",
-       "      <th>OtherLodging</th>\n",
-       "      <th>UtilitiesFuelsAndPublicServices</th>\n",
-       "      <th>TelephoneServices</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PersonalCare</th>\n",
-       "      <th>Reading</th>\n",
-       "      <th>Education</th>\n",
-       "      <th>TobaccoAndSmokingSupplies</th>\n",
-       "      <th>MiscellaneousExpenditures</th>\n",
-       "      <th>CashContributions</th>\n",
-       "      <th>PersonalInsuranceAndPensions</th>\n",
-       "      <th>AdjustedTotalExpenditures</th>\n",
-       "      <th>Geo_ID</th>\n",
-       "      <th>Geo_NAME</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>26443.329594</td>\n",
-       "      <td>4025.175808</td>\n",
-       "      <td>2581.391072</td>\n",
-       "      <td>1401.517195</td>\n",
-       "      <td>331.281924</td>\n",
-       "      <td>9466.709367</td>\n",
-       "      <td>6942.295049</td>\n",
-       "      <td>1491.088510</td>\n",
-       "      <td>341.748700</td>\n",
-       "      <td>669.146424</td>\n",
-       "      <td>...</td>\n",
-       "      <td>210.854394</td>\n",
-       "      <td>194.896926</td>\n",
-       "      <td>1593.873618</td>\n",
-       "      <td>761.902174</td>\n",
-       "      <td>259.434859</td>\n",
-       "      <td>763.618501</td>\n",
-       "      <td>3675.411797</td>\n",
-       "      <td>26443.329594</td>\n",
-       "      <td>14000US06075010100</td>\n",
-       "      <td>Census Tract 101, San Francisco County, Califo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>30901.612986</td>\n",
-       "      <td>4211.762977</td>\n",
-       "      <td>2571.873182</td>\n",
-       "      <td>1532.795973</td>\n",
-       "      <td>364.626358</td>\n",
-       "      <td>10354.610608</td>\n",
-       "      <td>7008.626655</td>\n",
-       "      <td>1637.349275</td>\n",
-       "      <td>411.653971</td>\n",
-       "      <td>702.226207</td>\n",
-       "      <td>...</td>\n",
-       "      <td>229.732935</td>\n",
-       "      <td>206.467524</td>\n",
-       "      <td>2025.747292</td>\n",
-       "      <td>782.064854</td>\n",
-       "      <td>281.778084</td>\n",
-       "      <td>970.693769</td>\n",
-       "      <td>4865.332270</td>\n",
-       "      <td>30901.612986</td>\n",
-       "      <td>14000US06075010200</td>\n",
-       "      <td>Census Tract 102, San Francisco County, Califo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30491.710456</td>\n",
-       "      <td>4400.284263</td>\n",
-       "      <td>2781.717686</td>\n",
-       "      <td>1509.926653</td>\n",
-       "      <td>350.085477</td>\n",
-       "      <td>10300.842659</td>\n",
-       "      <td>7053.925294</td>\n",
-       "      <td>1574.927631</td>\n",
-       "      <td>421.245433</td>\n",
-       "      <td>726.559799</td>\n",
-       "      <td>...</td>\n",
-       "      <td>230.187110</td>\n",
-       "      <td>204.941828</td>\n",
-       "      <td>1776.963951</td>\n",
-       "      <td>782.527889</td>\n",
-       "      <td>278.516836</td>\n",
-       "      <td>925.053622</td>\n",
-       "      <td>4557.725576</td>\n",
-       "      <td>30491.710456</td>\n",
-       "      <td>14000US06075010300</td>\n",
-       "      <td>Census Tract 103, San Francisco County, Califo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>30747.796453</td>\n",
-       "      <td>4313.059416</td>\n",
-       "      <td>2669.387922</td>\n",
-       "      <td>1533.853239</td>\n",
-       "      <td>360.091178</td>\n",
-       "      <td>10461.698958</td>\n",
-       "      <td>7031.416272</td>\n",
-       "      <td>1627.397079</td>\n",
-       "      <td>411.155274</td>\n",
-       "      <td>710.924823</td>\n",
-       "      <td>...</td>\n",
-       "      <td>230.612559</td>\n",
-       "      <td>205.290278</td>\n",
-       "      <td>1923.238050</td>\n",
-       "      <td>780.625947</td>\n",
-       "      <td>279.162858</td>\n",
-       "      <td>946.308192</td>\n",
-       "      <td>4800.377438</td>\n",
-       "      <td>30747.796453</td>\n",
-       "      <td>14000US06075010400</td>\n",
-       "      <td>Census Tract 104, San Francisco County, Califo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>28090.797842</td>\n",
-       "      <td>4018.812590</td>\n",
-       "      <td>2478.483113</td>\n",
-       "      <td>1476.146978</td>\n",
-       "      <td>354.243447</td>\n",
-       "      <td>9963.549708</td>\n",
-       "      <td>7336.754087</td>\n",
-       "      <td>1599.697824</td>\n",
-       "      <td>340.060462</td>\n",
-       "      <td>667.120093</td>\n",
-       "      <td>...</td>\n",
-       "      <td>217.776568</td>\n",
-       "      <td>199.196051</td>\n",
-       "      <td>1845.286331</td>\n",
-       "      <td>767.595861</td>\n",
-       "      <td>268.077226</td>\n",
-       "      <td>825.053297</td>\n",
-       "      <td>4341.387232</td>\n",
-       "      <td>28090.797842</td>\n",
-       "      <td>14000US06075010500</td>\n",
-       "      <td>Census Tract 105, San Francisco County, Califo...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 56 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   TotalExpenditures    TotalFood   FoodAtHome  FoodAwayFromHome  \\\n",
-       "0       26443.329594  4025.175808  2581.391072       1401.517195   \n",
-       "1       30901.612986  4211.762977  2571.873182       1532.795973   \n",
-       "2       30491.710456  4400.284263  2781.717686       1509.926653   \n",
-       "3       30747.796453  4313.059416  2669.387922       1533.853239   \n",
-       "4       28090.797842  4018.812590  2478.483113       1476.146978   \n",
-       "\n",
-       "   AlcoholicBeverages       Housing      Shelter  OtherLodging  \\\n",
-       "0          331.281924   9466.709367  6942.295049   1491.088510   \n",
-       "1          364.626358  10354.610608  7008.626655   1637.349275   \n",
-       "2          350.085477  10300.842659  7053.925294   1574.927631   \n",
-       "3          360.091178  10461.698958  7031.416272   1627.397079   \n",
-       "4          354.243447   9963.549708  7336.754087   1599.697824   \n",
-       "\n",
-       "   UtilitiesFuelsAndPublicServices  TelephoneServices  ...  PersonalCare  \\\n",
-       "0                       341.748700         669.146424  ...    210.854394   \n",
-       "1                       411.653971         702.226207  ...    229.732935   \n",
-       "2                       421.245433         726.559799  ...    230.187110   \n",
-       "3                       411.155274         710.924823  ...    230.612559   \n",
-       "4                       340.060462         667.120093  ...    217.776568   \n",
-       "\n",
-       "      Reading    Education  TobaccoAndSmokingSupplies  \\\n",
-       "0  194.896926  1593.873618                 761.902174   \n",
-       "1  206.467524  2025.747292                 782.064854   \n",
-       "2  204.941828  1776.963951                 782.527889   \n",
-       "3  205.290278  1923.238050                 780.625947   \n",
-       "4  199.196051  1845.286331                 767.595861   \n",
-       "\n",
-       "   MiscellaneousExpenditures  CashContributions  PersonalInsuranceAndPensions  \\\n",
-       "0                 259.434859         763.618501                   3675.411797   \n",
-       "1                 281.778084         970.693769                   4865.332270   \n",
-       "2                 278.516836         925.053622                   4557.725576   \n",
-       "3                 279.162858         946.308192                   4800.377438   \n",
-       "4                 268.077226         825.053297                   4341.387232   \n",
-       "\n",
-       "   AdjustedTotalExpenditures              Geo_ID  \\\n",
-       "0               26443.329594  14000US06075010100   \n",
-       "1               30901.612986  14000US06075010200   \n",
-       "2               30491.710456  14000US06075010300   \n",
-       "3               30747.796453  14000US06075010400   \n",
-       "4               28090.797842  14000US06075010500   \n",
-       "\n",
-       "                                            Geo_NAME  \n",
-       "0  Census Tract 101, San Francisco County, Califo...  \n",
-       "1  Census Tract 102, San Francisco County, Califo...  \n",
-       "2  Census Tract 103, San Francisco County, Califo...  \n",
-       "3  Census Tract 104, San Francisco County, Califo...  \n",
-       "4  Census Tract 105, San Francisco County, Califo...  \n",
-       "\n",
-       "[5 rows x 56 columns]"
+       "195"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result.head()"
+    "len(sf)"
    ]
   },
   {
