predicted exp 5 county average

--- a/Model Application.ipynb
+++ b/Model Application.ipynb
@@ -2387,6 +2387,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Expenditures for Each Year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year4 = pd.read_csv(\"pred_fmli_sfmsa2015.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year4.drop(year4.columns[0], axis = 1, inplace = True)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
