reran everything and add documentation

--- a/Second model - INCOME, HHSIZE, ROOMS, OWN, DEGREE, VEHICLES.ipynb
+++ b/Second model - INCOME, HHSIZE, ROOMS, OWN, DEGREE, VEHICLES.ipynb
@@ -22,12 +22,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This model is run based on the whole fmli_15_clean_3.csv. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "fmli = pd.read_csv(\"fmli_15_clean_3.csv\")\n",
+    "# getting rid of DETTACHED and PSU because we are not going to use them\n",
     "fmli.drop([\"DETTACHED\", \"PSU\"], axis = 1, inplace = True)"
    ]
   },
@@ -46,6 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Keep columns that appear in fmli\n",
     "sf.drop(sf.columns[[2, 4, 6, 8, 10, 12, 14]], axis = 1, inplace = True)\n",
     "sf.dropna(inplace = True)"
    ]
@@ -56,6 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Construct prediction matrix\n",
     "pred_X = sf.drop(sf.columns[[0, 1]], axis = 1)"
    ]
   },
@@ -186,6 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Change the order of columns so that they are consistent with fmli\n",
     "pred_X = sf[sf.columns[[3, 2, 4, 6, 5, 7]]]"
    ]
   },
@@ -212,6 +223,7 @@
    ],
    "source": [
     "# Log every variables, save it in a new data frame for future use.\n",
+    "# But we don't need to log OWN, DEGREE and VEHICLES so that replace these columns with original columns in fmli\n",
     "log = np.log(fmli)\n",
     "log[\"OWN\"] = fmli[\"OWN\"]\n",
     "log[\"DEGREE\"] = fmli[\"DEGREE\"]\n",
@@ -326,6 +338,7 @@
    ],
    "source": [
     "# Log every variables, save it in a new data frame for future use.\n",
+    "# But we don't need to log OWN, DEGREE and VEHICLES so that replace these columns with original columns in sf\n",
     "log_X = np.log(pred_X)\n",
     "log_X[\"CT.OWN\"] = pred_X[\"CT.OWN\"]\n",
     "log_X[\"CT.DEGREE\"] = pred_X[\"CT.DEGREE\"]\n",
@@ -342,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -354,16 +367,16 @@
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "  method=method)\n",
-      "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/ipykernel_launcher.py:26: SettingWithCopyWarning: \n",
+      "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/ipykernel_launcher.py:28: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
-      "  return ptp(axis=axis, out=out, **kwargs)\n"
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     }
    ],
    "source": [
+    "# Run Ordinary Linear Regression models with 6 variables on the design matrx(logged fmli with selected variables) for each type of expenditure\n",
+    "# Record all statistics of all models: adjusted r square, beta, stardard error, p value\n",
     "N = []\n",
     "adj_r = []\n",
     "b_hhsize = []\n",
@@ -385,7 +398,7 @@
     "p_degree = []\n",
     "p_veh = []\n",
     "\n",
-    "for i in range(16, 17):\n",
+    "for i in range(16, len(log.columns)):\n",
     "    df = log[[\"HHSIZE\", \"INCOME\", \"ROOMS\", \"OWN\", \"DEGREE\", \"VEHICLES\", log.columns[i]]]\n",
     "    df.replace(np.Inf, np.nan, inplace = True)\n",
     "    df.replace(-np.Inf, np.nan, inplace = True)\n",
@@ -415,6 +428,13 @@
     "    p_own.append(model.pvalues[4])\n",
     "    p_degree.append(model.pvalues[5])\n",
     "    p_veh.append(model.pvalues[6])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We realize that in each model, there are several variables with beta close to 0 and p value very high, which means these varialbes are too insignificant to contribute the dependent variable. We need to get rid of these insignificant variables."
    ]
   },
   {
@@ -751,18 +771,18 @@
       "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
       "  return ptp(axis=axis, out=out, **kwargs)\n",
       "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
-      "  return ptp(axis=axis, out=out, **kwargs)\n"
+      "  return ptp(axis=axis, out=out, **kwargs)\n",
+      "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/pandas/core/frame.py:4042: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  method=method)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/pandas/core/frame.py:4042: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  method=method)\n",
       "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/ipykernel_launcher.py:27: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
@@ -861,18 +881,18 @@
       "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
       "  return ptp(axis=axis, out=out, **kwargs)\n",
       "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
-      "  return ptp(axis=axis, out=out, **kwargs)\n"
+      "  return ptp(axis=axis, out=out, **kwargs)\n",
+      "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/pandas/core/frame.py:4042: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  method=method)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/pandas/core/frame.py:4042: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  method=method)\n",
       "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/ipykernel_launcher.py:27: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
@@ -971,22 +991,22 @@
       "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
       "  return ptp(axis=axis, out=out, **kwargs)\n",
       "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
-      "  return ptp(axis=axis, out=out, **kwargs)\n"
+      "  return ptp(axis=axis, out=out, **kwargs)\n",
+      "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/pandas/core/frame.py:4042: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  method=method)\n",
+      "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/ipykernel_launcher.py:27: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/pandas/core/frame.py:4042: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  method=method)\n",
-      "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/ipykernel_launcher.py:27: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
       "  return ptp(axis=axis, out=out, **kwargs)\n",
       "/Users/winnie/miniconda2/envs/tf/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
@@ -1008,6 +1028,7 @@
     }
    ],
    "source": [
+    "# To get rid of unnecessary variables, we use LASSO (L2-penalty) to get rid of the variabels that have very small beta and high p value.\n",
     "N = []\n",
     "adj_r = []\n",
     "b_hhsize = []\n",
@@ -1115,6 +1136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Since we logged everything except a few independent variables at the beginning, we have to take exponential to get the predicted y value\n",
     "result = pred_y\n",
     "for i in pred_y.columns:\n",
     "    result[i] = np.exp(pred_y[i])"
@@ -1146,6 +1168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# add geography information back to the result\n",
     "result[\"Geo_ID\"] = sf[\"CT.Geo_GEOID\"]\n",
     "result[\"Geo_NAME\"] = sf[\"CT.Geo_NAME\"]"
    ]
@@ -1156,6 +1179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Change the order of the columns so that the geography information is at the first columns.\n",
     "cols = list(result.columns)\n",
     "cols = [cols[len(cols) - 2]] + [cols[len(cols) - 1]] + cols[:len(cols) - 2]"
    ]
@@ -1184,6 +1208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Round the statistics of the models to 3 decimal places.\n",
     "b_hhsize = [round(x, 3) for x in b_hhsize]\n",
     "b_income = [round(x, 3) for x in b_income]\n",
     "b_rooms = [round(x, 3) for x in b_rooms]\n",
@@ -1215,6 +1240,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Preparing for write all statistics together in a single data frame.\n",
+    "# Recoding for the indices\n",
     "index = []\n",
     "for i in range(len(log.columns[16: len(log.columns)].values)):\n",
     "    index.append(log.columns[16: len(log.columns)].values[i])\n",
@@ -1290,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1326,7 @@
        "42"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,10 +1337,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Write recorded statistics of models into a single data frame\n",
     "parameter = pd.DataFrame({\"parameter\": [\"Beta\"] * 42 + [\"SE\"] * 42 + [\"Confidence Level\"] * 42,\n",
     "                          \"HHSIZE\": np.concatenate([b_hhsize, se_hhsize, p_hhsize]),\n",
     "                          \"INCOME\": np.concatenate([b_income, se_income, p_income]),\n",
@@ -1328,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2834,149 +2862,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "parameter.to_csv(\"multimodel_7var.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Normalized multivariable with insignificant variables dropped"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = []\n",
-    "adj_r = []\n",
-    "b_hhsize = []\n",
-    "b_income = []\n",
-    "b_rooms = []\n",
-    "b_own = []\n",
-    "b_degree = []\n",
-    "b_veh = []\n",
-    "se_hhsize = []\n",
-    "se_income = []\n",
-    "se_rooms = []\n",
-    "se_own = []\n",
-    "se_degree = []\n",
-    "se_veh = []\n",
-    "p_hhsize = []\n",
-    "p_income = []\n",
-    "p_rooms = []\n",
-    "p_own = []\n",
-    "p_degree = []\n",
-    "p_veh = []\n",
-    "\n",
-    "for i in range(16, len(log.columns)):\n",
-    "    df = log[[\"HHSIZE\", \"INCOME\", \"ROOMS\", \"OWN\", \"DEGREE\", \"VEHICLES\", log.columns[i]]]\n",
-    "    df.replace(np.Inf, np.nan, inplace = True)\n",
-    "    df.replace(-np.Inf, np.nan, inplace = True)\n",
-    "    df.dropna(inplace = True)\n",
-    "    df.reset_index(inplace = True)\n",
-    "    X = df[[\"HHSIZE\", \"INCOME\", \"ROOMS\", \"OWN\", \"DEGREE\", \"VEHICLES\"]]\n",
-    "    X \n",
-    "    Y = df[log.columns[i]]\n",
-    "    X1 = sm.add_constant(X)\n",
-    "    model = linear_model.Lasso(alpha=0.001, normalize = True).fit(X1, Y)\n",
-    "    N.append(len(Y))\n",
-    "    b_hhsize.append(model.coef_[1])\n",
-    "    b_income.append(model.coef_[2])\n",
-    "    b_rooms.append(model.coef_[3])\n",
-    "    b_own.append(model.coef_[4])\n",
-    "    b_degree.append(model.coef_[5])\n",
-    "    b_veh.append(model.coef_[6])\n",
-    "    \n",
-    "\n",
-    "    new = pd.DataFrame()\n",
-    "    if model.coef_[1] != 0:\n",
-    "        new[\"HHSIZE\"] = df[\"HHSIZE\"]\n",
-    "    if model.coef_[2] != 0:\n",
-    "        new[\"INCOME\"] = df[\"INCOME\"]\n",
-    "    if model.coef_[3] != 0:\n",
-    "        new[\"ROOMS\"] = df[\"ROOMS\"]\n",
-    "    if model.coef_[4] != 0:\n",
-    "        new[\"OWN\"] = df[\"OWN\"]\n",
-    "    if model.coef_[5] != 0:\n",
-    "        new[\"DEGREE\"] = df[\"DEGREE\"]\n",
-    "    if model.coef_[6] != 0:\n",
-    "        new[\"VEHICLES\"] = df[\"VEHICLES\"]\n",
-    "    normalized_new =(new - new.mean()) / new.std()\n",
-    "    normalized_new = sm.add_constant(new)\n",
-    "    model1 = sm.OLS(Y, normalized_new).fit() \n",
-    "    adj_r.append(model1.rsquared_adj)\n",
-    "    bse = list(model1.bse)\n",
-    "    bse.pop(0)\n",
-    "    p = list(model1.pvalues)\n",
-    "    p.pop(0)\n",
-    "    if model.coef_[1] != 0:\n",
-    "        se_hhsize.append(bse.pop(0))\n",
-    "        p_hhsize.append(p.pop(0))\n",
-    "    else:\n",
-    "        se_hhsize.append(-1)\n",
-    "        p_hhsize.append(-1)\n",
-    "    if model.coef_[2] != 0:\n",
-    "        se_income.append(bse.pop(0))\n",
-    "        p_income.append(p.pop(0))\n",
-    "    else:\n",
-    "        se_income.append(-1)\n",
-    "        p_income.append(-1)\n",
-    "    if model.coef_[3] != 0:\n",
-    "        se_rooms.append(bse.pop(0))\n",
-    "        p_rooms.append(p.pop(0))\n",
-    "    else:\n",
-    "        se_rooms.append(-1)\n",
-    "        p_rooms.append(-1)\n",
-    "    if model.coef_[4] != 0:\n",
-    "        se_own.append(bse.pop(0))\n",
-    "        p_own.append(p.pop(0))\n",
-    "    else:\n",
-    "        se_own.append(-1)\n",
-    "        p_own.append(-1)\n",
-    "    if model.coef_[5] != 0:\n",
-    "        se_degree.append(bse.pop(0))\n",
-    "        p_degree.append(p.pop(0))\n",
-    "    else:\n",
-    "        se_degree.append(-1)\n",
-    "        p_degree.append(-1)\n",
-    "    if model.coef_[6] != 0:\n",
-    "        se_veh.append(bse.pop(0))\n",
-    "        p_veh.append(p.pop(0))\n",
-    "    else:\n",
-    "        se_veh.append(-1)\n",
-    "        p_veh.append(-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.coef_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pred_y.mean(axis = 0)"
    ]
   },
   {
